--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 GOOGLE_GENAI_API_KEY=
-NEXT_PUBLIC_FIREBASE_API_KEY=YOUR_API_KEY
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=YOUR_AUTH_DOMAIN
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=YOUR_PROJECT_ID
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=YOUR_STORAGE_BUCKET
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
-NEXT_PUBLIC_FIREBASE_APP_ID=YOUR_APP_ID
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCccEYpIre2rzP_DfuLbt7KEUeShw7ZCHw
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=octavision-g28ij.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=octavision-g28ij
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=octavision-g28ij.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=951708337613
+NEXT_PUBLIC_FIREBASE_APP_ID=1:951708337613:web:224a7406399400f5c0f084
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID
