I need Gemini flash integration to draft up Group Alert Events  based on what the user enters in ]"What does the things you want the AI to detect from this group of cameras? (Group Default)"

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=octavision-g28ij.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=951708337613
 NEXT_PUBLIC_FIREBASE_APP_ID=1:951708337613:web:224a7406399400f5c0f084
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID
+GEMINI_API_KEY=
