Page 4 of the screenshots

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-GOOGLE_GENAI_API_KEY=
+GOOGLE_GENAI_API_KEY=YOUR_GOOGLE_GENAI_API_KEY
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCccEYpIre2rzP_DfuLbt7KEUeShw7ZCHw
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=octavision-g28ij.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=octavision-g28ij
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=octavision-g28ij.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=octavision-g28ij.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=951708337613
 NEXT_PUBLIC_FIREBASE_APP_ID=1:951708337613:web:224a7406399400f5c0f084
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
 GEMINI_API_KEY=AIzaSyALnO9qGeQVlfftPZJBlOrjuouT7jk3vUA
+NEXT_PUBLIC_VSS_API_BASE_URL=YOUR_VSS_API_BASE_URL_HERE
