so lets start with camera add feature. Make sure the firestore db are added and updated with all necessary info. Skip the thumbnail for now, since we dont have it. Call the necessary VSS api.
So for VSS api, it needs a base url. For now, Ill give a test ip value which you can use. Later on, we will be collecting this ip value from a db record. I havent done this part yet. So lets use the test value.

http://56.124.100.219:8100/

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=octavision-g28ij
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=octavision-g28ij.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=951708337613
 NEXT_PUBLIC_FIREBASE_APP_ID=1:951708337613:web:224a7406399400f5c0f084
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-RJ82L8X9S0
 GEMINI_API_KEY=AIzaSyALnO9qGeQVlfftPZJBlOrjuouT7jk3vUA
 NEXT_PUBLIC_VSS_API_BASE_URL=YOUR_VSS_API_BASE_URL_HERE
+VSS_API_BASE_URL=http://56.124.100.219:8100/
