--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,44 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
 .DS_Store
-*.pem
+.env.local
+.env.production
+.env.development
+.env
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# vercel
-.vercel
+# dependency directories
+node_modules/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# next.js
+.next/
+out/
 
-.genkit/*
+# firebase
+firebase-debug.log
+firebase-debug.*.log
+
+# production
+production/
+
+# misc
+.vscode/
+*.log
+*.local
+
+# build outputs
+dist/
+build/
+
+# cache
+.angular/
+.cache/
+.eslintcache
+
+# specific to python functions
+venv/
+__pycache__/
+*.pyc
