So I noticed, that in the add new camera page, After the step 1, I click next and it starts connecting the camera and saving to storage. and then moving to the step 2 page section,.
I want you to move to step2 page and then go on and connect the camera adn do the rest of the work

--- a/services/snapshot/requirements.txt
+++ b/services/snapshot/requirements.txt
@@ -1,8 +1,8 @@
 txt
-opencv-python-headless
+opencv-python-headless==4.7.0.68
 Flask
 firebase-admin
 google-cloud-storage
 gunicorn
 Flask-Cors
-numpy
+numpy<2
