--- a/services/snapshot/requirements.txt
+++ b/services/snapshot/requirements.txt
@@ -1,8 +1,8 @@
-txt
-opencv-python-headless==4.7.0.68
-Flask
-firebase-admin
-google-cloud-storage
-gunicorn
-Flask-Cors
-numpy<2
+Flask>=2.0
+Flask-CORS>=3.0
+opencv-python-headless>=4.0
+numpy<2 # Explicitly less than 2.0 to avoid recent numpy 2.0 ABI issues with older opencv builds
+firebase-admin>=5.0
+google-cloud-storage>=2.0.0
+google-auth>=2.0.0
+gunicorn>=20.0
